--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=in2
+
+spring.config.import=optional:file:.env[.properties]
+
+weather.api.key=${WEATHER_API_KEY}
+
+#h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.url=${H2_DB_URL}
+spring.datasource.username=${H2_DB_USERNAME}
+spring.datasource.password=${H2_DB_PASSWORD}
+spring.datasource.driverClassName=org.h2.Driver
+
