--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=in2
 
+#.env
 spring.config.import=optional:file:.env[.properties]
 
+#openweathermap api key
 weather.api.key=${WEATHER_API_KEY}
 
 #h2-console
@@ -9,8 +11,13 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
+#datasource
 spring.datasource.url=${H2_DB_URL}
 spring.datasource.username=${H2_DB_USERNAME}
 spring.datasource.password=${H2_DB_PASSWORD}
 spring.datasource.driverClassName=org.h2.Driver
 
+#jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
