--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=in2
+server.error.whitelabel.enabled=false
 
 #.env
 spring.config.import=optional:file:.env[.properties]
@@ -12,9 +13,9 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=true
 
 #datasource
-spring.datasource.url=${H2_DB_URL}
-spring.datasource.username=${H2_DB_USERNAME}
-spring.datasource.password=${H2_DB_PASSWORD}
+spring.datasource.url=jdbc:h2:mem:weatherdb
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 
 #jpa
